--- a/pkg/web/templates/stats.html
+++ b/pkg/web/templates/stats.html
@@ -371,6 +371,9 @@
                         const statusBadge = account.disabled ? 
                             '<span class="badge badge-error badge-sm">Disabled</span>' : 
                             '<span class="badge badge-success badge-sm">Active</span>';
+                        const inUseBadge = account.in_use ?
+                            '<span class="badge badge-info badge-sm">In Use</span>' :
+                            '';
                         
                         html += `
                             <div class="card bg-base-100 compact">
@@ -380,6 +383,7 @@
                                             <div class="flex items-center gap-2">
                                                 <h5 class="font-medium text-sm">Account #${account.order + 1}</h5>
                                                 ${statusBadge}
+                                                ${inUseBadge}
                                             </div>
                                             <p class="text-xs text-base-content/70 mt-1">${account.username || 'No username'}</p>
                                         </div>
